<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff">

    <RelativeLayout
        android:id="@+id/rlSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:maxLines="1"
            android:hint="@string/type_to_search"
            android:gravity="center_vertical|start"
            android:textSize="18sp"
            android:textColor="#000000"
            android:inputType="text"
            android:maxLength="50"
            android:padding="10dp"
            android:background="@drawable/et_background"
            android:paddingEnd="?android:actionBarSize"
            android:paddingRight="?android:actionBarSize"/>

        <TextView
            android:id="@+id/tvCross"
            android:layout_width="?android:actionBarSize"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/etSearch"
            android:layout_alignBottom="@+id/etSearch"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="X"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0 results filtered in 0 seconds"
        android:textSize="14sp"
        android:gravity="center_vertical|end"
        android:layout_below="@+id/rlSearch"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="#515151"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvInfo"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>